# Phaseo

./: .codex-pr706-body.md  .codex-tmp-openrouter-providers.html  .gitignore  .tmp-changed-files.txt  .tmp-ci-job-70576920055.patch  .tmp-devtools-generation.json  .tmp-status-files.txt  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINISH_REASON_IMPLEMENTATION.md  FINISH_REASON_TODO.md  LICENSE  MANIFESTO.md  OAUTH_ALPHA_CHECKLIST.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_PRODUCTION_CHECKLIST.md  OAUTH_TESTING_COMPLETE.md  RANKINGS_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  TESTING_GUIDE.md  goals.md  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr756.graphql  prq.json  prq2.json  resolve-thread.json  security_batch_api_audit.md  security_best_practices_report.md  security_realtime_pipeline_audit.md  security_realtime_pipeline_audit_2026-07-12.md  skills-lock.json  skills.md  test-all.mjs  test-anthropic-response.json  test-oauth-admin-api.mjs  (+9 more)
.changeset/: add-gpt-red-withheld.md  agent-sdk-devtools-sdk-parity.md  ai-sdk-provider-release.md  api-and-sdks-breaking-major.md  api-docs-refresh.md  batch-api-webhooks.md  bright-inklings.md  bright-poolside-logs.md  bright-react-devtools-alignment.md  calm-passkey-mfa-production.md  calm-posthog-consent-events.md  calm-settings-sidebar-icons.md  config.json  crofai-greg-2-model-ids.md  curvy-policy-import.md  devtools-viewer-minor-polish.md  fireworks-serverless-discovery.md  five-cougars-cheer.md  (+36 more)
rebrand/pypi-phaseo/: README.md  pyproject.toml
rebrand/pypi-phaseo/src/phaseo/: __init__.py
(+6715 files in other folders)
